<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context="com.gtu.ozturk.fourinarow.MainActivity">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="306dp"
        android:layout_height="33dp"
        android:layout_marginBottom="120dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:checkedButton="@+id/pvpRadiobutton"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/gameStartButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/pvpRadiobutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/pvp_radiobutton" />

        <RadioButton
            android:id="@+id/cvpRadiobutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/cvp_radiobutton"
            android:visibility="visible" />

    </RadioGroup>


    <Button
        android:id="@+id/gameStartButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="56dp"
        android:layout_marginEnd="149dp"
        android:layout_marginStart="147dp"
        android:layout_marginTop="407dp"
        android:backgroundTint="@android:color/holo_orange_dark"
        android:elevation="0dp"
        android:onClick="startGame"
        android:text="@string/menu_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <SeekBar
        android:id="@+id/sizeSeekBar"
        android:layout_width="153dp"
        android:layout_height="23dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/gameStartButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeText"
        app:layout_constraintVertical_bias="0.166" />

    <SeekBar
        android:id="@+id/timerSeekBar"
        android:layout_width="153dp"
        android:layout_height="23dp"
        android:layout_marginBottom="152dp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/gameStartButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timerText" />

    <TextView
        android:id="@+id/difficultyText"
        android:layout_width="368dp"
        android:layout_height="20dp"
        android:layout_marginBottom="8dp"
        android:text="@string/ai_difficulty"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/difficultySeekBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/boardSizeText"
        android:layout_width="85dp"
        android:layout_height="20dp"
        android:layout_marginBottom="4dp"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/sizeSeekBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/size_seekbar" />

    <TextView
        android:id="@+id/timerText"
        android:layout_width="368dp"
        android:layout_height="22dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/time_limit"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/timerSeekBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sizeSeekBar" />

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="322dp"
        android:layout_height="38dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:text="@string/welcome_message"
        android:textAlignment="center"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <SeekBar
        android:id="@+id/difficultySeekBar"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="153dp"
        android:layout_height="23dp"
        android:layout_marginBottom="32dp"
        android:max="5"
        android:progress="0"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/gameStartButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />


</android.support.constraint.ConstraintLayout>
